removed revoke all endpoint and some code changes